# maestro-memory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/memory/: SKILL.md
docs/: ARCHITECTURE-v2.md  TECHNICAL.md
docs/superpowers/plans/: 2026-03-27-mmem-v2-continuous-learning-engine.md
docs/superpowers/specs/: 2026-03-16-maestro-memory-design.md
evals/: run_ab_eval.py  run_longmemeval.py  run_optuna_sweep.py  run_qa_eval.py  run_retrieval_eval.py  scenarios.json
evals/results/: experiment_log.md
scripts/: bulk_ingest.py  memory-save.sh  nightly_consolidate.sh
skill/: SKILL.md
src/maestro_memory/: __init__.py  __main__.py  client.py
src/maestro_memory/cli/: __init__.py  add.py  config.py  consolidate.py  daemon.py  graph.py  relate.py  search.py  status.py
src/maestro_memory/core/: config.py  memory.py  models.py  profile.py  schema.py  session.py  store.py
src/maestro_memory/ingestion/: chunker.py  consolidate.py  dedup.py  enrichment.py  extractor.py  fallback.py  ocr.py
src/maestro_memory/logging/: __init__.py  serving_log.py
src/maestro_memory/mcp/: server.py
src/maestro_memory/ranking/: blender.py  features.py  online.py  prerank.py
src/maestro_memory/resources/: com.maestro.memory.plist
src/maestro_memory/retrieval/: ann_index.py  bm25.py  channels.py  confidence.py  embedding.py  fusion.py  graph.py  mmr.py  query_expansion.py  temporal.py  tokenizer.py
src/maestro_memory/server/: __init__.py  __main__.py  app.py  lifecycle.py  routes.py
tests/: conftest.py  test_benchmarks.py  test_cli.py  test_client.py  test_enrichment.py  test_ingestion.py  test_memory.py  test_profile.py  test_ranking.py  test_retrieval.py  test_server.py  test_serving_log.py  test_store.py
