[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "maestro-memory"
version = "0.1.0"
description = "Temporal hybrid memory system for AI agents"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20",
    "numpy>=1.26",
    "typer>=0.12",
]

[project.optional-dependencies]
local = ["sentence-transformers>=3.0"]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
all = ["maestro-memory[local]", "maestro-memory[openai]", "maestro-memory[anthropic]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
maestro-memory = "maestro_memory.cli:app"
mmem = "maestro_memory.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/maestro_memory"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
