[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maestro-memory"
version = "0.2.0"
description = "Temporal hybrid memory system for AI agents — cognitive-science-grounded retrieval with cross-encoder reranking"
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name = "Maestro AI", email = "open-source@maestro.onl"}]
keywords = ["memory", "agents", "retrieval", "embeddings", "sqlite", "temporal", "act-r", "reranking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiosqlite>=0.20",
    "numpy>=1.26",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/maestro-ai-stack/maestro-memory"
Repository = "https://github.com/maestro-ai-stack/maestro-memory.git"
Documentation = "https://github.com/maestro-ai-stack/maestro-memory/blob/master/docs/TECHNICAL.md"
"Bug Tracker" = "https://github.com/maestro-ai-stack/maestro-memory/issues"

[project.optional-dependencies]
local = ["sentence-transformers>=3.0"]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
chinese = ["jieba>=0.42"]
ann = ["hnswlib>=0.8"]
server = ["fastapi>=0.115", "uvicorn>=0.32", "httpx>=0.28"]
mcp = ["mcp>=1.0", "httpx>=0.28"]
all = ["maestro-memory[local]", "maestro-memory[openai]", "maestro-memory[anthropic]", "maestro-memory[chinese]", "maestro-memory[ann]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "httpx>=0.28"]

[project.scripts]
maestro-memory = "maestro_memory.cli:app"
mmem = "maestro_memory.cli:app"
mmem-mcp = "maestro_memory.mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/maestro_memory"]
artifacts = ["src/maestro_memory/py.typed"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
